--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Check build-logic
         run: ./gradlew check -p build-logic
 
+      - name: Check spotless
+        run: ./gradlew spotlessCheck --init-script spotless.gradle.kts
+
       - name: Build app
         run: ./gradlew :app:assemble
 
